# kronos

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: 01-vision-and-scope.md  02-requirements.md  03-architecture.md  04-data-sources.md  05-broker-integration.md  06-strategy-design.md  07-analysis-engines.md  09-risk-management.md  10-tech-stack.md  11-operations.md  12-security.md  13-legal-and-compliance.md  14-roadmap.md  15-glossary.md  README.md  STATUS.md
docs/1-foundation/: 01-vision-and-scope.md  02-requirements.md
docs/2-design/: 03-architecture.md  04-data-sources.md  05-broker-integration.md  10-tech-stack.md
docs/3-trading/: 06-strategy-design.md  07-analysis-engines.md  08-backtesting.md  09-risk-management.md
docs/4-operations/: 11-operations.md  12-security.md  13-legal-and-compliance.md
docs/5-roadmap/: 14-roadmap.md
docs/history/: 2026-07-02.md  2026-07-03.md  README.md
scripts/: backup.sh  install-launchd.sh  migrate_sqlite_to_pg.py  uninstall-launchd.sh
scripts/launchd/: com.kronos.backup.plist.template  com.kronos.runner.plist.template
src/kronos/: cli.py  config.py  logging_setup.py
src/kronos/analysis/: classify.py  classify_run.py  run.py  sentiment.py
src/kronos/collectors/: dart.py  naver.py  rss.py  run.py
src/kronos/dashboard/: app.py  category_view.py  events.py  queries.py  sentiment_view.py  ticker_view.py
src/kronos/matching/: backfill.py  matcher.py  tickers_sync.py
src/kronos/scheduler/: jobs.py  runner.py
src/kronos/storage/: db.py  hashing.py  models.py  reclassify.py  repository.py  schema.py
tests/: conftest.py  test_classify.py  test_collectors.py  test_config.py  test_dart_collector.py  test_events.py  test_matching.py  test_naver_collector.py  test_pblntf_inference.py  test_rss_collector.py  test_scheduler.py  test_sentiment.py  test_sentiment_view.py  test_storage.py  test_ticker_view.py
