[project]
name = "kronos"
version = "0.1.0"
description = "뉴스·공시 분석 기반 한국 주식 자동매매 시스템"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "feedparser>=6.0.12",
    "apscheduler>=3.10",
    "streamlit>=1.57.0",
    "pandas>=3.0.3",
    "altair>=6.1.0",
]

[project.optional-dependencies]
# 감성분석용 (torch/transformers). 무거워서 sentiment 워커에서만 설치.
analysis = [
    "torch>=2.2",
    "transformers>=4.40",
]

[project.scripts]
kronos = "kronos.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "respx>=0.21",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/kronos/cli.py" = ["B008"]  # typer는 인자 기본값으로 typer.Option/Argument를 요구함

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
